// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Image
    alt=" "
    fit="fill"
    isFluid={false}
    src=""
    variant="default"
  >
    <img
      alt=" "
      className="image fill default orion-fusion-theme"
      onError={[Function]}
      onLoad={[Function]}
      src=""
    />
  </Image>
</ThemeContextProvider>
`;

exports[`should render a circle image component with fluid behavior 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#ffe4c4",
      "height": 200,
      "width": 200,
    }
  }
>
  <Image
    alt="circle"
    fit="fill"
    isFluid={true}
    src=""
    variant="circle"
  />
</div>
`;

exports[`should render a hidden src image and a visible placeholder image 1`] = `
<Fragment>
  <img
    alt=" "
    className="image fill default hidden"
    height="75"
    onError={[Function]}
    onLoad={[Function]}
    src="profile.jpg"
    width="75"
  />
  <div>
    placeholder text
  </div>
</Fragment>
`;

exports[`should render a thumbail image component with fluid behavior 1`] = `
<img
  alt="thumbnail image"
  class="image fill thumbnail fluid"
  src=""
/>
`;

exports[`should render a thumbail image component with non-fluid behavior 1`] = `
<img
  alt="thumbnail image"
  class="image fill thumbnail"
  src=""
/>
`;

exports[`should render the placeholder image 1`] = `
<div>
  placeholder text
</div>
`;

exports[`should render the src image 1`] = `
<img
  alt="profile"
  className="image fill default"
  height="75"
  onError={[Function]}
  onLoad={[Function]}
  src="profile.jpg"
  width="75"
/>
`;
